--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                         <p>    Mungkin, kedepannya ini bakalan jadi Portfolio Desain saya, selain di Instagram </p>
                
                 </div>
+                
+                <div class="batang"> <div>
 
                 <div class="sidebar">
 
