--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="penulis cf">ditulis oleh <a href="#">Deffrian prayogo </a>. Pada 30 Juni 2021</div>
                         <p>    Assalamualaikum wr wb, kenalin saya Deffrian. Ini adalah salah satu web gw statis yg gw buat di tahun 2021, jadi terima kasih udh berkunjung</p>
         
-                        <p>    Assalamualaikum wr wb, introduce my name is Defrian. This is one of my static websites that I created in 2021, so thank you for visiting.
+                        <p>    Introduce my name is Defrian. This is one of my static websites that I created in 2021, so thank you for visiting.
 Currently I am a student at UNNES. My hobby is trying new things. Besides that, I also like memes, anime, and technology. Despite the fact that I am a science major, I also love art, especially digital art. So that in 2021 I will start studying graphic design from the ground up. Even though I like a lot of things that diverge from each other, I'm pretty consistent in learning what I love, thank you very much.</p>
                     
                         <p>    Mungkin, kedepannya ini bakalan jadi Portfolio Desain saya, selain di Instagram </p>
