--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="content ">
                 <div class="main ">
 
-                        <h2>Judul Artikel</h2>
+                        <h2>About Deffrian</h2>
                         <div class="penulis cf">ditulis oleh <a href="#">Deffrian prayogo </a>. Pada 30 Juni 2021</div>
                         <p>    Assalamualaikum wr wb, kenalin saya Deffrian. Ini adalah salah satu web gw statis yg gw buat di tahun 2021, jadi terima kasih udh berkunjung</p>
         
