--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                     <li><a href="#">home </a></li> 
                     <li><a href="#">about </a> </li> 
                     <li><a href="#">products </a></li> 
-                    <li><a href="#">services </a></li> 
-                    <li><a href="#">contact</a> </li> 
+                    <li><a href="https://wa.me/6282132602486">whatsapp </a></li> 
+                    <li><a href="https://www.instagram.com/senku.deff/">instagram</a> </li> 
                 </ul>
             </div>
             <div class="hero"></div>
