--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <div class="judul">MyWebsite</div>
             <div class="link">
                 <ul>
-                    <li><a href="#">home </a></li> 
-                    <li><a href="#">about </a> </li> 
-                    <li><a href="#">products </a></li> 
+                    <li><a href="defryan079.github.io">home </a></li> 
+                    <li><a href="https://id.linkedin.com/in/deffrian-prayogo-802564229">about </a> </li> 
+                    <li><a href="https://www.instagram.com/zen.graphic/">products </a></li> 
                     <li><a href="https://wa.me/6282132602486">whatsapp </a></li> 
                     <li><a href="https://www.instagram.com/senku.deff/">instagram</a> </li> 
                 </ul>
